# armv7em-intrinsics

./: CMakeLists.txt  README.md
include/armv7em-intrinsics/: barriers.hpp  bits.hpp  dsp.hpp  exclusive.hpp  hints.hpp  interrupts.hpp  reverse.hpp  saturation.hpp  svc.hpp
